# swissrpg-discord-bot

./: .dockerignore  .env  .gitignore  2022-01-26.sql  Caddyfile  Cargo.toml  README.md  askama.toml  backup.sh  bot-backup.service  bot-backup.timer  bot.conf  bot.service  bottest.conf  bottest.service  create_secret_env_files.py  create_slash_commands.py  docker.md  moving_servers.md  redis2postgres.py  run.sh  run_local.ps1  run_local.sh  runtest.sh  rustfmt.toml  schema.md  schema.sql  secrets.ps1.template  secrets.sh.template  swissrpg-app-test.Dockerfile  swissrpg-app.Dockerfile  swissrpg-backup.service  swissrpg-backup.timer  swissrpg-backupper.Dockerfile  tusker.toml
.sqlx/: query-041d45810394f234872ca8acd4fcad8ccbcfbd7245ab40a1b755da80481fd30d.json  query-063719466fe383824251fc8ae4dc0809ca13ae0b65e14b25b5be079774f72092.json  query-06b3c6386d5ac6ad9302693e30292e86046136b310163f5c55cd631e1b2eda9c.json  query-06f8c5f0c9f36fe48164efe07c19577c2055a3fb03ec5bde976f4288da7045a2.json  query-07930bfd60b593162226637b85d8fffb726f83a547af9716a7a1f1ef8a505aa8.json  query-07e738ed6a485937384a93cd2a008e399f1cac1358e3d22cda02e8a1fd9eae6a.json  query-0ed1bd705d87642817154dc3d43151b9c88a17863282bbdb922770095517a02c.json  query-0f257bb918e0e55f33e4d1e54226994d08190f9ef3e23879c07a2895efc99aba.json  query-12658aa5754d993fa99c6bb6c3d5e0233b0e260802d2ded2909167846ceadc86.json  query-148b344689c51ddc7e2e468f59c1d63a98e59e55c09a9d82146936be13e65d4e.json  query-1a8ed6ab11ec1a3b515d5921891b5c37213c6a70dbb68081ff79f324ce6a8e61.json  query-272427387602c354460604dd7ed13278a0e6d8b07feb871d73c67ec1baeb9e57.json  query-294299ef3585ec341b49bbf9f02eaaa30f8acbd674da7dbb59d7382a8f3de9f3.json  query-2d9dafd7382436d1e4c291f2f0918744a1f0c729fa2db1110ac1d41cf4b56094.json  query-319469cbca8875ba23857103de83043bf60877a13c40d06fbc2872573832e6f9.json  query-32dabec0b707c5a08163fb7a4b3ef47911c0db13d5c24616bb7327de309a7e99.json  query-33b5f5dbd9f5fd5017766e71a9445b9da3085df17b321f36f67674cdc38c1578.json  query-35b9e48e35156dce41344c8e07c9764cdd2db9fffb6ff0e79d777051957edf63.json  query-3aa00888d4431cfbab32d735c4dafdd8f3772a453648d4f90691644af47939b4.json  query-3ab079c318146b2e57ba9c5b271b68f78dfd855d2fa93a858d2bd847f7128d15.json  query-3c0ff95dba7aa5d1c80abcc1a07a9e58c7491fddecf2f0807a845d0ccbe49686.json  query-458587ce6845003ce0a3ff7a2f9c99d110d5d3764620fb4b8702e615bd77bf2a.json  query-471d371896b6cc5d1187f474b695bd856b4b41f69910ff449bacf15f28a9cc88.json  query-477d37e4e8162a082e087562d164254c9a87c53668a935314cc162c462c5a2b8.json  query-478b1a9cf96aa7723dc4bc18672dd305d3be428a1132dadff0997758b3ac8772.json  query-4d42e13ad559c68c1aed480e1e9829178791c9a791e0413452ac333250c8eca5.json  query-4d80e6562321ea7201265fae617c694fb2ce650bda40f0c6fe12c8de5899f4ed.json  query-5108dfefd21323edc1259ec3ff1fffa858af571480c807f643a4c8184d3fc92d.json  query-559da18bf4222eefc5e93c15e7777d6719a43791de3d5a4c4c2e132db2d6b690.json  query-583831d6acb5dd71dd927ff7e59de7c0a5e846f00b784682d47697d64ec1ef12.json  query-59d8bca2d271de431ee863677799e0051de225d4e549de6663d959a8c058ed8a.json  query-5a9a06c0415bb5175dad75e05a54b95a0346f5019f42b63e2233c6e690e9f788.json  query-5c3513a03fd3ca8f0a9a0a4015c78b273b43704fb613ac278b6d76424c52c052.json  query-61f10ea14fd8ded65315bbf534662f58a92b6ac5a8b57d59e32ac9c8bc9422c3.json  query-6377b3c789eead7c4a548e57533c48af7fc74515ce5e83bf3b637c8e9650a98b.json  query-63ad0de436dbd06f43dd86c541003e55c7c95c8234ce5c97e4ccea4ed5618d8a.json  query-6558a91e8e97bf5b20d87f80315d5bcc83e6356819e20c3f56e5aea7f6c76a28.json  query-68fcdb7ac753265b4dce1a38b0b45d767c9b83e380f381336ddde9fde15e75cc.json  query-6c2a8647051fe952266a7ac0e41813bcd08773c9b4e7b60416f438ace21852ec.json  query-6ce4ac74e18405e3114971ca72d72709b86ec6d267b7759e0344b9f41b12f117.json  (+93 more)
app/: Cargo.toml  sqlx-data.json
app/src/: main.rs  sync_task.rs
bot/: Cargo.toml
command_macro/: Cargo.toml
command_macro/src/: lib.rs
common/: Cargo.toml
discord/: Cargo.toml
discord/src/: bot.rs  bot_commands.rs  end_of_game.rs  lib.rs  main.rs  meetup.rs  sync.rs
docker/: Dockerfile  compile.bat  compile.sh  compile_fast.sh  compile_test.sh  compile_test_fast.bat  compile_test_fast.sh
lib/: Cargo.toml  askama.toml  sqlx-data.json
lib/src/: db.rs  end_adventure.rs  error.rs  free_spots.rs  lib.rs  redis.rs  role_shortcode.rs  schedule_session.rs  strings.rs  urls.rs
lib/src/asana/: api.rs  ids.rs  mod.rs  pagination.rs  tags.rs  task.rs
lib/src/discord/: mod.rs  sync.rs  util.rs
lib/src/flow/: mod.rs
lib/src/meetup/: api.rs  error.rs  mod.rs  newapi.rs  oauth2.rs  oauth2_async_http_client.rs  queries.graphql  schema.graphql  sync.rs  util.rs
lib/src/meetup/html/static/: link.css
lib/src/meetup/html/templates/: link.html
lib/src/stripe/: mod.rs
lib/src/tasks/: archive.rs  end_of_game.rs  mod.rs  subscription_roles.rs  sync.rs  token_refresh.rs  user_topic_voice_channel.rs  vacuum.rs
meetup/: Cargo.toml
meetup-auth/: Cargo.toml
meetup-auth/src/: main.rs
migrations/: 20220208_initial_schema.down.sql  20220208_initial_schema.up.sql  20220226_ephemeral_settings.down.sql  (+2 more)
ui/: Cargo.toml  askama.toml  sqlx-data.json
ui/src/: lib.rs
ui/src/discord/: bot.rs  bot_commands.rs  commands.rs  mod.rs  spam.rs
ui/src/discord/commands/: add_user.rs  archive.rs  clone_event.rs  count_inactive.rs  create_linking_message.rs  end_adventure.rs  end_all.rs  help.rs  link_meetup.rs  list_inactive.rs  list_players.rs  list_subscriptions.rs  login.rs  manage_channel.rs  mention_channel.rs  mod.rs  numcached.rs  refresh_meetup_token.rs  remind_expiration.rs  rsvp_user.rs  schedule_session.rs  snooze.rs  stop.rs  sync_discord.rs  sync_meetup.rs  sync_subscriptions.rs  test.rs  topic.rs  whois.rs
ui/src/web/: api.rs  auth.rs  create_game.rs  linking.rs  mod.rs  schedule_session.rs  server.rs  stripe_webhook_endpoint.rs
ui/src/web/html/design/: schedule_session.html
ui/src/web/html/static/: form.js  link.css
ui/src/web/html/templates/: base.html  link.html  login.html  main.html  message.html  schedule_session.html  schedule_session_success.html
(+52 files in other folders)
