[package]
name = "swissrpg-discord-bot"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3"
redis = "0.11.0-beta"
regex = "1"
serenity = "0.6"