[package]
name = "swissrpg-discord-bot"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
backtrace = "0.3"
base64 = "0.10"
chrono = "0.4"
cookie = "0.12"
futures = "0.1"
hyper = "0.12"
itertools = "0.8"
lazy_static = "1.3"
oauth2 = "3.0.0-alpha"
rand = "0.7"
redis = "0.11"
regex = "1"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serenity = "0.6"
simple-error = "0.2"
time = "0.1"
tokio = { version = "0.1", default-features = false, features = ["rt-full"] }
url = "1.7"
white_rabbit = "0.1"

[profile.release]
lto = true
