[package]
name = "swissrpg-app"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest", "ui/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
ui = { path = "../ui", package = "swissrpg-ui" }
async-stripe = { version = "0.15", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
redis = { version = "0.22", default-features = false, features = ["tokio-comp"] }
serenity = { version = "0.11", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"] }
signal-hook = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
