[package]
name = "swissrpg-app"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest", "ui/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
ui = { path = "../ui", package = "swissrpg-ui" }
async-stripe = { version = "0.39", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "80c657efa7fb981449cab8fab69097c9dc93a50a", default-features = false, features = ["cache", "gateway", "model", "rustls_backend"] }
signal-hook = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
