[package]
name = "swissrpg-command-macro"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
oauth2 = { version = "3.0.0-alpha.9", default-features = false, features = ["futures-03", "reqwest-010"] }
redis = "0.15"
regex = "1"
serenity = "0.8"
simple-error = "0.2"
stripe-rust = { git = "https://github.com/dthul/stripe-rs", branch = "api2019-11-05", default-features = false, features = ["billing", "webhook-events", "async"] }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }