[package]
name = "swissrpg-command-macro"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
