[package]
name = "swissrpg-discord-bot"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.11.0-beta"
regex = "1"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serenity = "0.6"
simple-error = "0.2"
url = "1.7"