[package]
name = "swissrpg-lib"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = []

[dependencies]
askama = "0.12"
async-stripe = { version = "0.29", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
# cynic = { version = "1.0", features = ["reqwest"] }
# Custom fork of cynic to disable reqwest default features (which pull in native-tls). The next official release of cynic should have this fix
# cynic = { git = "https://github.com/dthul/cynic", branch = "v1.0.0" }
futures = "0.3"
futures-util = "0.3"
geo = { version = "0.27", default-features = false }
graphql_client = "0.13"
hyper = "0.14"
iso8601 = "0.6"
itertools = "0.12"
lazy_static = "1.4"
oauth2 = "4.0"
rand = "0.8"
redis = { version = "0.26", default-features = false, features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"] }
simple-error = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
unicode-segmentation = "1.7"
url = "2.1"
