[package]
name = "swissrpg-lib"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = []

[dependencies]
askama = "0.12"
async-stripe = { version = "0.39", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
# cynic = { version = "1.0", features = ["reqwest"] }
# Custom fork of cynic to disable reqwest default features (which pull in native-tls). The next official release of cynic should have this fix
# cynic = { git = "https://github.com/dthul/cynic", branch = "v1.0.0" }
futures = "0.3"
futures-util = "0.3"
geo = { version = "0.27", default-features = false }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client.git", rev = "9b91a7f7d4a21dbbeacf974bce63fe5e55620ca8" }
hyper = "1.1"
iso8601 = "0.6"
itertools = "0.12"
lazy_static = "1.4"
oauth2 = "=5.0.0-rc.1"
rand = "0.8"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "80c657efa7fb981449cab8fab69097c9dc93a50a", default-features = false, features = ["cache", "gateway", "model", "rustls_backend"] }
simple-error = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
unicode-segmentation = "1.7"
url = "2.1"
