[package]
name = "meetup-auth"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.9"
hyper = "0.12"
oauth2 = "3.0.0-alpha"
rand = "0.6"
url = "1.0"