[package]
name = "swissrpg-ui"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
aho-corasick = "0.7"
askama = { git = "https://github.com/djc/askama", rev = "1b18bab91ba773425e521abc276a1278e0d61f3c" }
askama_axum = { git = "https://github.com/djc/askama", rev = "1b18bab91ba773425e521abc276a1278e0d61f3c" }
async-stripe = { version = "0.22", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
axum = { version = "0.5", features=["headers"] }
assert-impl = "0.1"
base64 = "0.13.0"
command_macro = { path = "../command_macro", package = "swissrpg-command-macro" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.8"
cookie = { version = "0.16", features = ["private"] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
hyper = "0.14"
lazy_static = "1.4"
num-traits = "0.2"
oauth2 = "4.0"
once_cell = "1.5"
rand = "0.8"
redis = { version = "0.22", default-features = false, features = ["tokio-comp"] }
regex = "1"
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"] }
simple-error = "0.2"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
tower-http = { version = "0.3.0", features = ["fs"] }
