[package]
name = "swissrpg-ui"
version = "0.1.0"
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# bottest feature not enabled by default
default = []

bottest = ["lib/bottest"]

[dependencies]
lib = { path = "../lib", package = "swissrpg-lib" }
aho-corasick = "1.0"
askama = "0.12"
askama_axum = "0.4"
async-stripe = { version = "0.39", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "webhook-events", "checkout", "connect"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
assert-impl = "0.1"
base64 = "0.22"
command_macro = { path = "../command_macro", package = "swissrpg-command-macro" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
cookie = { version = "0.18", features = ["private"] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
hyper = "1.1"
lazy_static = "1.4"
num-traits = "0.2"
oauth2 = "=5.0.0-rc.1"
once_cell = "1.5"
rand = "0.8"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
regex = "1"
serde = "1.0"
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "80c657efa7fb981449cab8fab69097c9dc93a50a", default-features = false, features = ["cache", "gateway", "model", "rustls_backend"] }
simple-error = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
